# py1cORM

./: .gitignore  LICENSE  example.py  pyproject.toml  requirements.dev.txt  requirements.txt
examples/: example.py
src/PyOData1C/: http_client.py
src/PyOData1C/odata/: client.py  expressions.py  factories.py  fields.py  manager.py  models.py  query.py  utils.py
src/py1cORM/: client.py  connection.py  exceptions.py  exeptions.py  http_client.py  models.py
src/py1cORM/models/: base.py  fields.py  relations.py
src/py1cORM/odata/: client.py  expressions.py  factories.py  fields.py  manager.py  models.py  query.py  serializers.py  utils.py
src/py1cORM/parser/: convert.py  entity.py  sentinels.py
tests/: conftest.py  models.py  utils.py
tests/models/: __init__.py  test_model_schema.py
tests/parser/: test_convert_basic.py  test_embedded_basic.py  test_entity_basic.py  test_entity_repr.py  test_expand_only.py  test_extra_fields.py  test_foreign_key.py  test_full_graph.py  test_real_1c_response.py  test_sentinels.py  test_uuid_serialization.py
tests/py1corm/models/: test_fk_proxy.py
tests/py1corm/queryset/: test_batched.py  test_filter_batched.py  test_iterator.py  test_like.py
tests/py1corm/unit/: test_kwargs_to_expr.py  test_nested_foreign_path.py  test_serialize.py
tests/queryset/: test_filter.py  test_select.py
tests/unit/: test_field_to_path.py  test_kwargs_to_expr.py  test_nested_foreign_path.py  test_serialize.py
